helm/ip-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "ip-ingress"
  labels:
    app.kubernetes.io/name: "nginx-ingress"
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
 
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: test
                port:
                  number: 80
